--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,7 @@
 language: python
-install: 
- - sudo apt-get install -y build-essential software-properties-common python-software-properties curl git-core libxml2-dev libxslt1-dev python-pip python-apt python-dev
- - sudo pip install --upgrade pip
- - sudo pip install --upgrade virtualenv
- - cd /var/tmp
- - git clone -b release https://github.com/edx/configuration
- - cd /var/tmp/configuration
- - sudo pip install -r requirements.txt
+install:
+ - wget https://raw.githubusercontent.com/edx/configuration/master/util/install/vagrant.sh -O - | bash
  - cd /var/tmp/configuration/playbooks
- - sudo ansible-playbook -c local ./edx_sandbox.yml -i "localhost,"
  - sudo ansible-playbook -i localhost, -c local vagrant-devstack.yml --tags=deploy -e configuration_version=release
  - sudo su edxapp
 cache:
