--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: python
-install:
- - wget https://raw.githubusercontent.com/edx/configuration/master/util/install/vagrant.sh -O - | bash
- - cd /var/tmp/configuration/playbooks
- - sudo ansible-playbook -i localhost, -c local vagrant-devstack.yml --tags=deploy -e configuration_version=release
- - sudo su edxapp
+install: sudo ./install.sh
 cache:
   directories:
    - /var/tmp/
